syntax = "proto3";

option csharp_namespace = "ProductGrpc";

service ProductGrpcService {
  rpc GetProductById (GetProductByIdRequest) returns (GetProductByIdResponse);
}

message GetProductByIdRequest {
  int32 productId = 1;
}

message GetProductByIdResponse {
  int32 productId = 1;
  string name = 2;
  double price = 3;
  int32 stock = 4;
  bool isAvailable = 5;
}
